# QtForce_NOW

./: CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp
